# fsi-genai-bootcamp

./: .gitignore  README.md
01_prompt_engineering/: 1_converse_api_intro.ipynb  2_prompt_eng_fundamentals.ipynb
02_prompt_engineering/: 1_basic_techniques.ipynb  1_converse_api_intro.ipynb  1_setup.ipynb  2_basic_techniques.ipynb  2_claude_best_practices.ipynb  2_converse_api.ipynb  3_advanced_techniques.ipynb  3_claude_best_practices.ipynb  4_advanced_techniques.ipynb  4_basic_agent.ipynb  4_tools_and_agents.ipynb  5_amazon_nova_prompting.ipynb  5_tools_and_agents.ipynb  advanced_techniquesipynb.ipynb  basic_techniques.ipynb  requirements.txt  stock_ticker_database.db
03_agents/99_misc/02_investment_agent_bedrock/: .gitignore  Makefile  cdk.json  pyproject.toml
03_agents/99_misc/02_investment_agent_bedrock/action_handlers/stock_data/: requirements.txt  tests.py
03_agents/99_misc/02_investment_agent_bedrock/action_handlers/stock_data/test_events/: get_current_date_200.json  get_stock_data_daily_422.json
03_agents/99_misc/02_investment_agent_bedrock/infra/: agent_stack.py
03_agents/99_misc/02_investment_agent_bedrock/scripts/: install_cdk.sh
04_guardrails/: 01_configure_guardrails.ipynb  02_validate_guardrails.ipynb  03_guardrails_with_bedrock.ipynb  requirements.txt
04_rag_vector_db/: README.md  requirements.txt
05_sagemaker_inference/: llama7b_lmi_smoothquant.ipynb  llama7b_lmi_trt_llm.ipynb  llama7b_multi_adapter.ipynb
06_sagemaker_fine_tuning/: launch_training_job.ipynb
07_capstone/: 01_usecase_setup.ipynb  capstone.ipynb  capstone_app.py  (+5 more)
(+127 files in other folders)
